# plume

./: .gitignore  Makefile  README.md  index.html  package-lock.json  package.json  settings.html  tailwind.config.js  vite.config.ts
.github/workflows/: publish.yml
src/: index.css  main.ts  settings.css  settings.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  settings.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: mod.rs
src-tauri/src/capture/: mod.rs
src-tauri/src/config/: mod.rs
src-tauri/src/engine/: mod.rs
src-tauri/src/gpu/: mod.rs
src-tauri/src/llama/: mod.rs
src-tauri/src/spellcheck/: mod.rs
src-tauri/src/state/: mod.rs
winget-manifest/manifests/b/b7s/Plume/0.1.0/: b7s.Plume.installer.yaml  b7s.Plume.locale.en-US.yaml
