[package]
name = "plume"
version = "0.1.0"
edition = "2021"

[lib]
name = "plume_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
futures-util = "0.3"
whatlang = "0.16"

uiautomation = { version = "0.25", features = ["pattern", "event"] }
async-trait = "0.1"
zip = "2"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_System_Com",
    "Win32_System_Registry",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
] }

[target.'cfg(target_os = "windows")'.dependencies]
